<resources>
    <string name="app_name">Vet App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="id">id</string>
    <string name="logout">LogOut</string>
    <string name="cancel">Cancel</string>
    <string name="my_animals">My Animals</string>
    <string name="search">Search</string>
    <string name="animal_id">Animal Id</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="kind">Kind</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="create">Create</string>
    <string name="enter_kind">Enter Kind</string>
    <string name="edit">Edit</string>
</resources>